# Guess-the-number

./: README.md  pyproject.toml
.github/workflows/: ci.yml  zip.yml
docs/: EXPLANATORY_NOTE.md  REPORT.md  REQUIREMENTS.md  USER_GUIDE.md
src/guess_the_number/: __init__.py  game.py
tests/: test_game.py
